[CLIC] few changes

--- a/include/Software.tex
+++ b/include/Software.tex
@@ -9,8 +9,8 @@ simulations are validated with the data and used to predict the
 performance of small-pitch pixels where data is unavailable. 
 
 This chapter describes the simulation tools used to understand the
-performance of Timepix3 devices. The reconstruction software (for data
-and simulation) is also presented.
+performance of Timepix3 devices. The reconstruction software, used for
+both data and simulation, is also presented.
 
 %% --------------------------------------------- %%
 \section{\textsc{Geant4}}\label{sec:Silicon_Geant4}
