--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -29,7 +29,7 @@ precisely the properties of the Higgs boson. Then the CLIC detector
 and its components are described. The focus is put on the vertex
 detector, its requirements and its flavour-tagging performance.
 
-\section{CLIC physics potential} 
+\section{Physics potential at CLIC} 
 
 In particle physics, the Standard Model (SM) is a theoretical
 framework that describes how the interaction between elementary
@@ -156,7 +156,7 @@ generation complex.
 \end{figure}
 
 
-\section{The CLIC vertex-detector requirements}
+\section{Requirements for the CLIC vertex-detector}
 \label{sec:VXD_requirements}
 
 A detector concept covering the CLIC physics potential is under
@@ -251,7 +251,7 @@ $\approx50~\text{mW/cm}^2$ forced air-flow cooling and power pulsing
 (i.e. turning off most components on the readout chips during the
 20~ms gaps between bunch trains) are foreseen.
 
-\section{Flavour tagging performance at CLIC}
+\section{Flavour-tagging performance at CLIC}
 \label{sec:flavourTagging}
 
 The precision physics measurements require excellent flavour-tagging
